<resources>
    <string name="app_name">Project</string>
    <string name="Title">智慧家電</string>
    <string name="Title_air">冷氣控制</string>
    <string name="Title_light">電燈控制</string>
    <string name="Title_door">門禁控制</string>
    <string name="Title_setting">設定</string>
    <string name="Title_Main">主頁面</string>
    <string name="switch_light" >電燈開關</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="username">使用者名稱</string>
    <string name="passward">密碼</string>
    <string name="switch_door">門開關</string>
    <string name="back">返回</string>
    <string name="password_confirm">確認密碼</string>
    <string name="progress_title">請稍等</string>
    <string name="progress_text1">執行中</string>
    <string name="progress_text2">執行中.</string>
    <string name="progress_text3">執行中..</string>
    <string name="progress_text4">執行中...</string>
    <string name="change_password">更換密碼</string>
    <string name="about_us">關於我們</string>
    <string name="individual_info">個人資料</string>
    <string name="team">製作團隊</string>
    <string name="web_api_maker">Web Api開發:李兆玄</string>
    <string name="Hardware_maker">硬體開發:孫華佑</string>
    <string name="app_maker">手機軟體開發:李兆玄</string>
    <string name="database_maker">資料庫設計:林信佑</string>
    <string name="firmware_maker">韌體開發:林信佑</string>
    <string name="aircon_not_open">冷氣還沒開啟!!</string>
    <string name="Failconnect">與伺服器連接失敗!!</string>
    <string name="Success" >成功</string>
    <string name="Fail">失敗</string>
</resources>