<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/fragment_background"
    android:padding="20dp">
    <TextView

        android:id="@+id/aboutus_team"
        android:text="@string/team"
        android:textSize="28dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:paddingLeft="20dp"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/aboutus_team"
        android:text="@string/app_maker"
        android:id="@+id/aboutus_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:paddingLeft="20dp"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/aboutus_app"
        android:text="@string/web_api_maker"
        android:id="@+id/aboutus_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:paddingLeft="20dp"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/aboutus_hardware"
        android:text="@string/database_maker"
        android:id="@+id/aboutus_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:paddingLeft="20dp"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/aboutus_database"
        android:text="@string/firmware_maker"
        android:id="@+id/aboutus_firmware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:paddingLeft="20dp"
        android:textSize="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/aboutus_web"
        android:text="@string/Hardware_maker"
        android:id="@+id/aboutus_hardware"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </TextView>
</RelativeLayout>
