<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">


    <TextView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:layout_marginTop="50dp"
        android:textColor="@color/title"
        android:text="@string/Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/title"
        android:textSize="36dp"
        />

    <EditText
        android:id="@+id/editText_user"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:textColor="@color/title"
        android:textColorHint="@color/white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="16dp"
        android:layout_marginBottom="35dp"
        android:layout_above="@+id/editText_password"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:textColorHint="@color/title"
        android:ems="10"
        android:hint="@string/passward"
        android:inputType="textPassword"
        android:layout_marginBottom="130dp"
        android:layout_alignBottom="@+id/btn_Login"
        android:layout_alignLeft="@+id/editText_user"
        android:layout_alignStart="@+id/editText_user" />

    <Button
        android:background="@drawable/rectangle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/button"
        android:id="@+id/btn_Login"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/btn_register"
        android:layout_centerHorizontal="true">

    </Button>

    <Button
        android:background="@drawable/rectangle_button"
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/button"
        android:text="@string/register"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" />


</RelativeLayout>
