<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"

    >
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ControlPage.Setting">

        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:textSize="64sp"
            android:text="@string/Title"
            android:textColor="@color/title"
            android:layout_marginTop="24sp"
            android:id="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/Title_setting"
            android:textColor="@color/title"
            android:textSize="36dp" />

        <TextView
            android:layout_width="match_parent"
            android:text="@string/individual_info"
            android:textSize="36dp"
            android:padding="25dp"
            android:id="@+id/txt_info"
            android:layout_below="@+id/title"
            android:layout_height="wrap_content">
        </TextView>
        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/txt_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layout_info">
        </RelativeLayout>
        <TextView
            android:id="@+id/txt_setting"
            android:layout_width="match_parent"
            android:text="@string/Title_setting"
            android:textSize="36dp"
            android:padding="25dp"
            android:layout_below="@+id/layout_info"
            android:layout_height="wrap_content">
        </TextView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_setting"
            android:id="@+id/layout_setting">
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/about_us"
            android:textSize="36dp"
            android:padding="25dp"
            android:id="@+id/txt_aboutus"
            android:layout_below="@+id/layout_setting"
            android:layout_height="wrap_content">
        </TextView>
        <RelativeLayout
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_aboutus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/layout_aboutus">
        </RelativeLayout>
        <Button
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_back_setting"
            android:text="@string/back"
            android:textColor="@color/button"
            android:layout_below="@id/layout_aboutus"
            android:layout_marginBottom="40dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rectangle_button" />
    </RelativeLayout>
</ScrollView>
