<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ControlPage.Air_contral">
    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:textSize="64sp"
        android:text="@string/Title"
        android:textColor="@color/title"
        android:layout_marginTop="30dp"
        android:id="@id/imageView"
        android:layout_height="wrap_content">
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/title"
        android:text="@string/Title_air"
        android:textColor="@color/white"
        android:textSize="36dp"
        />
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:text="24°C"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:textSize="60dp"
            android:textColor="@color/white"
            android:id="@+id/txt_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:orientation="vertical">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="20dp"
                android:background="@drawable/circle_button"
                android:id="@+id/btn_temp_up"
                android:src="@drawable/up_arrow">
            </ImageButton>
            <ImageView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:id="@+id/btn_temp_down"
                android:background="@drawable/circle_button"
                android:src="@drawable/down_arrow">
            </ImageView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_windspeed"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="大"
                android:textColor="@color/white"
                android:textSize="60dp"></TextView>

            <ImageButton
                android:id="@+id/btn_fan"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_button"
                android:padding="10dp"
                android:src="@drawable/fan">
            </ImageButton>
        </LinearLayout>
    </LinearLayout>
    <androidx.appcompat.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Switch_temp"
        android:layout_marginTop="30dp"
        android:longClickable="false"
        android:layout_gravity="center"
        app:switchMinWidth="200dp"
        app:track="@drawable/track"
        android:thumb="@drawable/thumb"
        />
    <Button
        android:id="@+id/btn_back_air"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_button"
        android:text="@string/back"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        >
    </Button>
</LinearLayout>